@@ -636,3 +636,5 @@
 20040311 ui/gtk/roms.c: make changing ROMs work.
 20040311 machine.c: remove the segfault which would occur if one of the
 	 ROMs of a multi-ROM machine didn't load.
+20040312 ay.c: unused bits of AY registers are silently zeroed (basically
+	 equivalent to patch #911206 by Stuart Brady).
